tests/neg-custom-args/captures/try.check
-- Error: tests/neg-custom-args/captures/try.scala:24:3 ----------------------------------------------------------------
22 |  val a = handle[Exception, CanThrow[Exception]] {
23 |    (x: CanThrow[Exception]) => x
24 |  }{ // error
   |          ^
   |          The expression's type {*} CT[Exception] is not allowed to capture the root capability `*`.
   |          This usually means that a capability persists longer than its allowed lifetime.
25 |    (ex: Exception) => ???
26 |  }
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/try.scala:28:43 ------------------------------------------
28 |  val b = handle[Exception, () -> Nothing] {  // error
   |                                           ^
   |                                           Found:    ? (x: CanThrow[Exception]) -> {x} () -> ? Nothing
   |                                           Required: CanThrow[Exception] => () -> Nothing
29 |    (x: CanThrow[Exception]) => () => raise(new Exception)(using x)
30 |  } {
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/try.scala:39:4 ----------------------------------------------------------------
34 |  val xx = handle {
35 |    (x: CanThrow[Exception]) =>
36 |      () =>
37 |        raise(new Exception)(using x)
38 |        22
39 |  } {  // error
   |           ^
   |           The expression's type {*} () -> Int is not allowed to capture the root capability `*`.
   |           This usually means that a capability persists longer than its allowed lifetime.
40 |    (ex: Exception) => () => 22
41 |  }
-- Error: tests/neg-custom-args/captures/try.scala:51:2 ----------------------------------------------------------------
46 |val global = handle {
47 |  (x: CanThrow[Exception]) =>
48 |    () =>
49 |      raise(new Exception)(using x)
50 |      22
51 |} {  // error
   |             ^
   |             The expression's type {*} () -> Int is not allowed to capture the root capability `*`.
   |             This usually means that a capability persists longer than its allowed lifetime.
52 |  (ex: Exception) => () => 22
53 |}
